--- a/webvisualizations/index.html
+++ b/webvisualizations/index.html
@@ -45,8 +45,16 @@
             <span class="sr-only">(current)</span>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Graphs</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Graphs</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="LatvTemp.html">Latitude vs. Temp.</a>
+            <a class="dropdown-item" href="LatvHumidity.html">Latitude vs. Humidity</a>
+            <a class="dropdown-item" href="LatvCloud.html">Latitude vs. Cloudiness</a>
+            <a class="dropdown-item" href="LatvWind.html">Latitude vs. Wind</a>
+            <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Separated link</a>
+        </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Data</a>
@@ -64,8 +72,29 @@
             <div class="col-8">Main Content</div>
             <div class="col-4 bg-info">
               <div class="thumbnail">
-                <img src="visualizations\tempvslat.png" alt="temp-thumbnail">
+                 <a href="LatvTemp.html"><img src="tempvslat.png" alt="temp-thumbnail" class="img-thumbnail"></a>
+              </div>  
+              <div class="caption">
+                <h3>Latitude vs. Temperature</h3>
               </div>
+              <div class="thumbnail">
+                <a href="LatvHumidity.html"><img src="..\visualizations\humidityvslat.png" alt="humidity-thumbnail" class="img-thumbnail"></a>
+             </div>  
+             <div class="caption">
+               <h3>Latitude vs. Humidity</h3>
+             </div>
+             <div class="thumbnail">
+                <a href="LatvCloud.html"><img src="..\visualizations\cloudsvslat.png" alt="cloudiness-thumbnail" class="img-thumbnail"></a>
+            </div>  
+            <div class="caption">
+             <h3>Latitude vs. Cloudiness</h3>
+            </div>
+            <div class="thumbnail">
+              <a href="LatvWind.html"><img src="..\visualizations\windvslat.png" alt="wind-thumbnail" class="img-thumbnail"></a>
+           </div>  
+           <div class="caption">
+             <h3>Latitude vs. Wind</h3>
+           </div>
             </div>
 
         </div>
