--- a/webvisualizations/index.html
+++ b/webvisualizations/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Plots</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarcolor02" aria-controls="navbarcolor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -53,11 +53,11 @@
             <a class="dropdown-item" href="LatvCloud.html">Latitude vs. Cloudiness</a>
             <a class="dropdown-item" href="LatvWind.html">Latitude vs. Wind</a>
             <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Separated link</a>
+          <a class="dropdown-item" href="#">Comparison</a>
         </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Data</a>
+          <a class="nav-link" href="..\resources\index.html">Data</a>
         </li>
       </ul>
     </div>
@@ -66,10 +66,12 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-12">Weather Data</div>
+            <div class="col-12">
+              <h1>Comparisons between Latitude and Weather</h1>
+            </div>
         </div>
         <div class="row">
-            <div class="col-8">Main Content</div>
+            <div class="col-8"></div>
             <div class="col-4 bg-info">
               <div class="thumbnail">
                  <a href="LatvTemp.html"><img src="tempvslat.png" alt="temp-thumbnail" class="img-thumbnail"></a>
