--- a/webvisualizations/index.html
+++ b/webvisualizations/index.html
@@ -60,18 +60,23 @@
           <a class="nav-link" href="..\resources\index.html">Data</a>
         </li>
       </ul>
+
     </div>
 
   </nav>
 
     <div class="container">
         <div class="row">
-            <div class="col-12">
-              <h1>Comparisons between Latitude and Weather</h1>
+            <div id="Landing" class="col-12">
+              <h1>Latitude and the Affect on Weather</h1>
+
             </div>
         </div>
         <div class="row">
-            <div class="col-8"></div>
+            <div id="Lat-Map" class="col-8">
+              <img src="..\visualizations\Latitude_zones.png" alt="Latitude-template" class="bg"> 
+              <!-- <img src="..\visualizations\Latitude_zones.png" alt="Latitude-template"> -->
+            </div>
             <div class="col-4 bg-info">
               <div class="thumbnail">
                  <a href="LatvTemp.html"><img src="tempvslat.png" alt="temp-thumbnail" class="img-thumbnail"></a>
