--- a/resources/index.html
+++ b/resources/index.html
@@ -34,14 +34,14 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Plots</a>
+    <a class="navbar-brand" href="..\webvisualizations\index.html">Plots</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarcolor02" aria-controls="navbarcolor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarcolor02">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home
+          <a class="nav-link" href="..\webvisualizations\index.html">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
@@ -53,7 +53,7 @@
             <a class="dropdown-item" href="..\webvisualizations\LatvCloud.html">Latitude vs. Cloudiness</a>
             <a class="dropdown-item" href="..\webvisualizations\LatvWind.html">Latitude vs. Wind</a>
             <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Comparison</a>
+          <a class="dropdown-item" href="..\webvisualizations\comparison.html">Comparison</a>
         </div>
         </li>
         <li class="nav-item">
