--- a/webvisualizations/LatvTemp.html
+++ b/webvisualizations/LatvTemp.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Plots</a>
+        <a class="navbar-brand" href="index.html">Plots</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarcolor02" aria-controls="navbarcolor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -54,7 +54,7 @@
                   <a class="dropdown-item" href="LatvCloud.html">Latitude vs. Cloudiness</a>
                   <a class="dropdown-item" href="LatvWind.html">Latitude vs. Wind</a>
                   <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Comparison</a>
+                <a class="dropdown-item" href="comparison.html">Comparison</a>
               </div>
               </li>
             <li class="nav-item">
