--- a/webvisualizations/index.html
+++ b/webvisualizations/index.html
@@ -53,7 +53,7 @@
             <a class="dropdown-item" href="LatvCloud.html">Latitude vs. Cloudiness</a>
             <a class="dropdown-item" href="LatvWind.html">Latitude vs. Wind</a>
             <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Comparison</a>
+          <a class="dropdown-item" href="comparison.html">Comparison</a>
         </div>
         </li>
         <li class="nav-item">
