--- a/resources/index.html
+++ b/resources/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Weather Data</title>
     <link
     rel="stylesheet"
@@ -65,6 +66,8 @@
 
 
   </nav>
+  <!-- <div class="position-sticky-bottom">scrollbar</div> -->
+
   <div class="table-responsive table table-hover">
     <table border="1" class="dataframe" id="wd">
       <thead>
