--- a/webvisualizations/LatvCloud.html
+++ b/webvisualizations/LatvCloud.html
@@ -66,15 +66,16 @@
     </nav>
     <div class="container">
         <div class="row">
-            <h1 class="text-center">City Latitude Vs Cloudiness</h1>
+            <h1 class="display-4">City Latitude Vs Cloudiness</h1>
         </div>
         <div class="row">
             <div class="col-8">
-                    <img src="..\visualizations\cloudsvslat.png" alt="LatvCloud">
+                    <img src="..\visualizations\cloudsvslat.png" class="img-fluid" alt="LatvCloud">
 
                     <p>This graph shows ...</p>
             </div>
-            <div class="col-4 bg-info">
+
+            <div class="col-4 bg-info" id="gthumbnails">
                 <div class="thumbnail">
                    <a href="LatvTemp.html"><img src="tempvslat.png" alt="temp-thumbnail" class="img-thumbnail"></a>
                 </div>  
@@ -101,14 +102,65 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-8">
-                <p>This graph shows ...</p>
-            </div>
-        </div>
-        
     </div>
-  
+  <!-- <footer> -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="thumbnail" href="LatvTemp.html">
+        <img src="tempvslat.png" width="60" height="60" class="d-inline-block align-top" alt="temp-thumbnail">
+        Latitude vs. Temperature
+      </a>
+      <a class="thumbnail" href="LatvTemp.html">
+        <img src="tempvslat.png" width="60" height="60" class="d-inline-block align-top" alt="temp-thumbnail">
+        Latitude vs. Temperature
+      </a>
+      <a class="thumbnail" href="LatvTemp.html">
+        <img src="tempvslat.png" width="60" height="60" class="d-inline-block align-top" alt="temp-thumbnail">
+        Latitude vs. Temperature
+      </a>
+      <a class="thumbnail" href="LatvTemp.html">
+        <img src="tempvslat.png" width="60" height="60" class="d-inline-block align-top" alt="temp-thumbnail">
+        Latitude vs. Temperature
+      </a>
+
+    </nav>
+<!-- </footer> -->
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+
+
+  </div>
+
+  <div class="col-4 bg-info" id="gthumbnails">
+      <div class="thumbnail">
+         <a href="LatvTemp.html"><img src="tempvslat.png" alt="temp-thumbnail" class="img-thumbnail"></a>
+      </div>  
+      <div class="caption">
+        <h3>Latitude vs. Temperature</h3>
+      </div>
+      <div class="thumbnail">
+        <a href="LatvHumidity.html"><img src="..\visualizations\humidityvslat.png" alt="humidity-thumbnail" class="img-thumbnail"></a>
+     </div>  
+     <div class="caption">
+       <h3>Latitude vs. Humidity</h3>
+     </div>
+     <div class="thumbnail">
+        <a href="LatvCloud.html"><img src="..\visualizations\cloudsvslat.png" alt="cloudiness-thumbnail" class="img-thumbnail"></a>
+      </div>  
+      <div class="caption">
+          <h3>Latitude vs. Cloudiness</h3>
+      </div>
+      <div class="thumbnail">
+          <a href="LatvWind.html"><img src="..\visualizations\windvslat.png" alt="wind-thumbnail" class="img-thumbnail"></a>
+      </div>  
+      <div class="caption">
+          <h3>Latitude vs. Wind</h3>
+      </div>
+  </div>
+</div>
+</div> -->
+
 
 </body>
 </html>
