--- a/webvisualizations/comparison.html
+++ b/webvisualizations/comparison.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Weather Data</title>
     <link
     rel="stylesheet"
@@ -62,6 +63,12 @@
       </ul>
     </div>
   </nav>
+<div class="container">
+    <div class="row">
+        <h1 class="display-6">Comparison:  Latitude vs. X</h1>
+    </div>
+</div>
+
 <div class="row row-cols-1 row-cols-md-2">
     <div class="col mb-4">
         <div class="card">
@@ -113,54 +120,7 @@
         </div>
     </div>
 </div>
-  <!-- <div class="card deck">
-      <div class="card">
-        <div class="card-body">
-            <h5 class="card-title">Latitude vs Temperature</h5>
-        </div>
-      <img src="tempvslat.png" class="card-img-top" alt="LatvTemp">
-      <div class="card-body">
-          <!-- <h5 class="card-title">Temperature vs. Latitude</h5> -->
-          <!-- <p class="card-text">This goes below</p>
-      </div>
-    </div> --> -->
-  <!-- <div class="card">
-    <div class="card-body">
-        <h5 class="card-title">Latitude vs. Humidity</h5>
-    </div>
-  <img src="..\visualizations\humidityvslat.png" class="card-img-top" alt="LatvHumidity">
-  <div class="card-body">
 
-      <p class="card-text">This goes below</p>
-  </div>
-</div>
-<div class="card">
-    <div class="card-body">
-        <h5 class="card-title">Latitude vs. Cloudiness</h5>
-    </div>
-  <img src="..\visualizations\cloudsvslat.png" class="card-img-top" alt="LatvClouds">
-  <div class="card-body">
-
-      <p class="card-text">This goes below</p>
-  </div>
-</div>
-</div> -->
-      <!-- <ul>
-          <li>
-              <img src="tempvslat.png" alt="LatvTemp">
-          </li>
-          <l2>
-              <img src="..\visualizations\humidityvslat.png" alt="LatvHumidity">
-          </l2>
-          <l3>
-              <img src="..\visualizations\cloudsvslat.png" alt="LatvClouds">
-          </l3>
-          <l4>
-               <img src="..\visualizations\windvslat.png" alt="LatvWind">
-          </l4> -->
-
-      <!-- </ul>  
-  </div> -->
 
 </body>
 </html>
