--- a/webvisualizations/LatvHumidity.html
+++ b/webvisualizations/LatvHumidity.html
@@ -66,11 +66,11 @@
     </nav>
     <div class="container">
         <div class="row">
-            <h1 class="text-center">City Latitude Vs Humidity</h1>
+            <h1 class="display-4">City Latitude Vs Humidity</h1>
         </div>
         <div class="row">
             <div class="col-8">
-                    <img src="..\visualizations\humidityvslat.png" alt="LatvHumidity">
+                    <img src="..\visualizations\humidityvslat.png" class="img-fluid" alt="LatvHumidity">
 
                     <p>This graph shows ...</p>
             </div>
@@ -103,7 +103,7 @@
         </div>
         <div class="row">
             <div class="col-8">
-                <p>This graph shows ...</p>
+                <!-- <p>This graph shows ...</p> -->
             </div>
         </div>
         
