--- a/webvisualizations/index.html
+++ b/webvisualizations/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Weather Data</title>
     <link
     rel="stylesheet"
@@ -77,7 +78,7 @@
               <img src="..\visualizations\Latitude_zones.png" alt="Latitude-template" class="bg"> 
               <!-- <img src="..\visualizations\Latitude_zones.png" alt="Latitude-template"> -->
             </div>
-            <div class="col-4 bg-info">
+            <div class="col-4 bg-info" id="gthumbnails">
               <div class="thumbnail">
                  <a href="LatvTemp.html"><img src="tempvslat.png" alt="temp-thumbnail" class="img-thumbnail"></a>
               </div>  
@@ -106,6 +107,7 @@
 
         </div>
     </div>
+    <div class="d-flex flex-column"
 </body>
 
 </html>
