--- a/webvisualizations/LatvCloud.html
+++ b/webvisualizations/LatvCloud.html
@@ -103,63 +103,29 @@
             </div>
         </div>
     </div>
-  <!-- <footer> -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+ 
+    <div class="d-{md,lg,xl}-none">
+    <nav class="navbar navbar-expand-false navbar-light bg-light"> 
       <a class="thumbnail" href="LatvTemp.html">
         <img src="tempvslat.png" width="60" height="60" class="d-inline-block align-top" alt="temp-thumbnail">
         Latitude vs. Temperature
       </a>
-      <a class="thumbnail" href="LatvTemp.html">
-        <img src="tempvslat.png" width="60" height="60" class="d-inline-block align-top" alt="temp-thumbnail">
+      <a class="thumbnail" href="LatvHumidity.html">
+        <img src="..\visualizations\humidityvslat.png" width="60" height="60" class="d-inline-block align-top" alt="Humidity-thumbnail">
         Latitude vs. Temperature
       </a>
-      <a class="thumbnail" href="LatvTemp.html">
-        <img src="tempvslat.png" width="60" height="60" class="d-inline-block align-top" alt="temp-thumbnail">
+      <a class="thumbnail" href="LatvCloud.html">
+        <img src="..\visualizations\cloudsvslat.png" width="60" height="60" class="d-inline-block align-top" alt="cloud-thumbnail">
         Latitude vs. Temperature
       </a>
-      <a class="thumbnail" href="LatvTemp.html">
-        <img src="tempvslat.png" width="60" height="60" class="d-inline-block align-top" alt="temp-thumbnail">
+      <a class="thumbnail" href="LatvWind.html">
+        <img src="..\visualizations\windvslat.png" width="60" height="60" class="d-inline-block align-top" alt="wind-thumbnail">
         Latitude vs. Temperature
       </a>
 
     </nav>
-<!-- </footer> -->
-      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-
-
   </div>
 
-  <div class="col-4 bg-info" id="gthumbnails">
-      <div class="thumbnail">
-         <a href="LatvTemp.html"><img src="tempvslat.png" alt="temp-thumbnail" class="img-thumbnail"></a>
-      </div>  
-      <div class="caption">
-        <h3>Latitude vs. Temperature</h3>
-      </div>
-      <div class="thumbnail">
-        <a href="LatvHumidity.html"><img src="..\visualizations\humidityvslat.png" alt="humidity-thumbnail" class="img-thumbnail"></a>
-     </div>  
-     <div class="caption">
-       <h3>Latitude vs. Humidity</h3>
-     </div>
-     <div class="thumbnail">
-        <a href="LatvCloud.html"><img src="..\visualizations\cloudsvslat.png" alt="cloudiness-thumbnail" class="img-thumbnail"></a>
-      </div>  
-      <div class="caption">
-          <h3>Latitude vs. Cloudiness</h3>
-      </div>
-      <div class="thumbnail">
-          <a href="LatvWind.html"><img src="..\visualizations\windvslat.png" alt="wind-thumbnail" class="img-thumbnail"></a>
-      </div>  
-      <div class="caption">
-          <h3>Latitude vs. Wind</h3>
-      </div>
-  </div>
-</div>
-</div> -->
 
 
 </body>
