--- a/webvisualizations/LatvCloud.html
+++ b/webvisualizations/LatvCloud.html
@@ -72,7 +72,10 @@
             <div class="col-8">
                     <img src="..\visualizations\cloudsvslat.png" class="img-fluid" alt="LatvCloud">
 
-                    <p>This graph shows ...</p>
+                    <p>This graph shows whether a cities latitude and closness to the equator affects the cloudiness.
+                      Since the plots are all over the graph it can be concluded that there is no significant correlation
+                      between the percent of cloudiness and a cities latitude.
+                    </p>
             </div>
 
             <div class="col-4 bg-info" id="gthumbnails">
