--- a/webvisualizations/LatvWind.html
+++ b/webvisualizations/LatvWind.html
@@ -72,7 +72,12 @@
             <div class="col-8">
                     <img src="..\visualizations\windvslat.png" class="img-fluid" alt="LatvWind">
 
-                    <p>This graph shows ...</p>
+                    <p>This graph shows cities latitude vs their windiness or wind speed in mph.  While
+                      the graph shows slightly more plots of data on the right side of the graph or Northern Hemisphere,
+                      there does not seem to be enough data to show causation.
+                    </p>
+                    <hr>
+                    <p>*Interesting note - the only wind speed above 25mph(on the day the data was pulled) is found in the Northern Hemisphere.</p>
             </div>
             <div class="col-4 bg-info" id="gthumbnails">
                 <div class="thumbnail">
