--- a/webvisualizations/index.html
+++ b/webvisualizations/index.html
@@ -73,11 +73,25 @@
 
             </div>
         </div>
-        <div class="row">
+
             <div id="Lat-Map" class="col-8">
               <img src="..\visualizations\Latitude_zones.png" alt="Latitude-template" class="bg"> 
               <!-- <img src="..\visualizations\Latitude_zones.png" alt="Latitude-template"> -->
+               </div>
+    </div>
+
+              <div class="row" >
+              <div class="col-8 p-5">
+              <h2>Summary</h2>
+              
+              <p1 class="text-teal" class="front-weight-bolder">The scatter plot graphs shows the latitude and X(weather being compared) for each city on the date the data was pulled. Using a scatter plot allows for 
+              an easy visual and quick analysis on whether a cities latitude(distance from equator) impacts X(the weather). </p1>
+              <hr>
+              <p1 class="text-teal" class="text-break">In these graphs and analysis the study was focused on paying particular attention to how the weather changed the 
+              closer a city got to the equator or a latitude of zero.  The study pulled four different types of weather data- temperature, humidity,
+              windiness, and cloudiness. </p1>
             </div>
+
             <div class="col-4 bg-info" id="gthumbnails">
               <div class="thumbnail">
                  <a href="LatvTemp.html"><img src="tempvslat.png" alt="temp-thumbnail" class="img-thumbnail"></a>
