--- a/webvisualizations/LatvHumidity.html
+++ b/webvisualizations/LatvHumidity.html
@@ -72,7 +72,10 @@
             <div class="col-8">
                     <img src="..\visualizations\humidityvslat.png" class="img-fluid" alt="LatvHumidity">
 
-                    <p>This graph shows ...</p>
+                    <p>This graph shows a cities latitude and humidity at the time the data was pulled and seems
+                      to indicate there is no correlation or causation between humidity and location.
+                      Though at close examination there might be slightly more dots on the right side of the graph(the Northern Hemisphere).
+                    </p>
             </div>
             <div class="col-4 bg-info" id="gthumbnails">
                 <div class="thumbnail">
