--- a/webvisualizations/LatvTemp.html
+++ b/webvisualizations/LatvTemp.html
@@ -72,7 +72,11 @@
             <div class="col-8">
                     <img src="tempvslat.png" class="img-fluid" alt="tempvslat">
 
-                    <p>This graph shows ...</p>
+                    <p>This scatter plot graph shows the latitude and max temperature for each city on the date the data was pulled. Using a scatter plot allows for 
+                      an easy visual and quick analysis on whether a cities latitude(distance from equator) impacts its max temperature.</p>
+                    <p><strong>Analysis:</strong> While the temperatures above 40&#8457 seem to be semi-uniform; only the Northern Hemisphere has max 
+                      temperatures below 40&#8457 on the date pulled.  
+                    </p>
             </div>
             <div class="col-4 bg-info" id="gthumbnails">
                 <div class="thumbnail">
