--- a/data.html
+++ b/data.html
@@ -31,34 +31,34 @@
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"
   ></script>
-  <link rel="stylesheet" href="../webvisualizations/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="..\webvisualizations\index.html">Plots</a>
+    <a class="navbar-brand" href="index.html">Plots</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarcolor02" aria-controls="navbarcolor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarcolor02">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="..\webvisualizations\index.html">Home
+          <a class="nav-link" href="index.html">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Graphs</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="..\webvisualizations\LatvTemp.html">Latitude vs. Temp.</a>
-            <a class="dropdown-item" href="..\webvisualizations\LatvHumidity.html">Latitude vs. Humidity</a>
-            <a class="dropdown-item" href="..\webvisualizations\LatvCloud.html">Latitude vs. Cloudiness</a>
-            <a class="dropdown-item" href="..\webvisualizations\LatvWind.html">Latitude vs. Wind</a>
+            <a class="dropdown-item" href="LatvTemp.html">Latitude vs. Temp.</a>
+            <a class="dropdown-item" href="LatvHumidity.html">Latitude vs. Humidity</a>
+            <a class="dropdown-item" href="LatvCloud.html">Latitude vs. Cloudiness</a>
+            <a class="dropdown-item" href="LatvWind.html">Latitude vs. Wind</a>
             <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="..\webvisualizations\comparison.html">Comparison</a>
+          <a class="dropdown-item" href="comparison.html">Comparison</a>
         </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="..\resources\index.html">Data</a>
+          <a class="nav-link" href="data.html">Data</a>
         </li>
       </ul>
 
