--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="..\resources\index.html">Data</a>
+          <a class="nav-link" href="data.html">Data</a>
         </li>
       </ul>
 
@@ -75,7 +75,7 @@
         </div>
 
             <div id="Lat-Map" class="col-8">
-              <img src="..\visualizations\Latitude_zones.png" alt="Latitude-template" class="bg"> 
+              <img src=".\visualizations\Latitude_zones.png" alt="Latitude-template" class="bg"> 
               <!-- <img src="..\visualizations\Latitude_zones.png" alt="Latitude-template"> -->
                </div>
     </div>
@@ -94,25 +94,25 @@
 
             <div class="col-4 bg-info" id="gthumbnails">
               <div class="thumbnail">
-                 <a href="LatvTemp.html"><img src="tempvslat.png" alt="temp-thumbnail" class="img-thumbnail"></a>
+                 <a href="LatvTemp.html"><img src=".\visualizations\tempvslat.png" alt="temp-thumbnail" class="img-thumbnail"></a>
               </div>  
               <div class="caption">
                 <h3>Latitude vs. Temperature</h3>
               </div>
               <div class="thumbnail">
-                <a href="LatvHumidity.html"><img src="..\visualizations\humidityvslat.png" alt="humidity-thumbnail" class="img-thumbnail"></a>
+                <a href="LatvHumidity.html"><img src=".\visualizations\humidityvslat.png" alt="humidity-thumbnail" class="img-thumbnail"></a>
              </div>  
              <div class="caption">
                <h3>Latitude vs. Humidity</h3>
              </div>
              <div class="thumbnail">
-                <a href="LatvCloud.html"><img src="..\visualizations\cloudsvslat.png" alt="cloudiness-thumbnail" class="img-thumbnail"></a>
+                <a href="LatvCloud.html"><img src=".\visualizations\cloudsvslat.png" alt="cloudiness-thumbnail" class="img-thumbnail"></a>
             </div>  
             <div class="caption">
              <h3>Latitude vs. Cloudiness</h3>
             </div>
             <div class="thumbnail">
-              <a href="LatvWind.html"><img src="..\visualizations\windvslat.png" alt="wind-thumbnail" class="img-thumbnail"></a>
+              <a href="LatvWind.html"><img src=".\visualizations\windvslat.png" alt="wind-thumbnail" class="img-thumbnail"></a>
            </div>  
            <div class="caption">
              <h3>Latitude vs. Wind</h3>
@@ -125,19 +125,19 @@
     <div class="d-{md,lg,xl}-none">
       <nav class="navbar navbar-expand-false navbar-light bg-light"> 
         <a class="thumbnail" href="LatvTemp.html">
-          <img src="tempvslat.png" width="60" height="60" class="d-inline-block align-top" alt="temp-thumbnail">
+          <img src=".\visualizations\tempvslat.png" width="60" height="60" class="d-inline-block align-top" alt="temp-thumbnail">
           Latitude vs. Temperature
         </a>
         <a class="thumbnail" href="LatvHumidity.html">
-          <img src="..\visualizations\humidityvslat.png" width="60" height="60" class="d-inline-block align-top" alt="Humidity-thumbnail">
+          <img src=".\visualizations\humidityvslat.png" width="60" height="60" class="d-inline-block align-top" alt="Humidity-thumbnail">
           Latitude vs. Temperature
         </a>
         <a class="thumbnail" href="LatvCloud.html">
-          <img src="..\visualizations\cloudsvslat.png" width="60" height="60" class="d-inline-block align-top" alt="cloud-thumbnail">
+          <img src=".\visualizations\cloudsvslat.png" width="60" height="60" class="d-inline-block align-top" alt="cloud-thumbnail">
           Latitude vs. Temperature
         </a>
         <a class="thumbnail" href="LatvWind.html">
-          <img src="..\visualizations\windvslat.png" width="60" height="60" class="d-inline-block align-top" alt="wind-thumbnail">
+          <img src=".\visualizations\windvslat.png" width="60" height="60" class="d-inline-block align-top" alt="wind-thumbnail">
           Latitude vs. Temperature
         </a>
   
