--- a/LatvHumidity.html
+++ b/LatvHumidity.html
@@ -105,29 +105,29 @@
             </div>
         </div>
     </div>
-
+<span>
     <div class="d-{md,lg,xl}-none">
       <nav class="navbar navbar-expand-false navbar-light bg-light"> 
         <a class="thumbnail" href="LatvTemp.html">
-          <img src=".\visualizations\tempvslat.png" width="60" height="60" class="d-inline-block align-top" alt="temp-thumbnail">
+          <img src=".\visualizations\tempvslat.png" width="125" height="100" class="d-inline-block align-top" alt="temp-thumbnail">
           Latitude vs. Temperature
         </a>
         <a class="thumbnail" href="LatvHumidity.html">
-          <img src=".\visualizations\humidityvslat.png" width="60" height="60" class="d-inline-block align-top" alt="Humidity-thumbnail">
-          Latitude vs. Temperature
+          <img src=".\visualizations\humidityvslat.png" width="125" height="100" class="d-inline-block align-top" alt="Humidity-thumbnail">
+          Latitude vs. Humidity
         </a>
         <a class="thumbnail" href="LatvCloud.html">
-          <img src=".\visualizations\cloudsvslat.png" width="60" height="60" class="d-inline-block align-top" alt="cloud-thumbnail">
-          Latitude vs. Temperature
+          <img src=".\visualizations\cloudsvslat.png" width="125" height="100" class="d-inline-block align-top" alt="cloud-thumbnail">
+          Latitude vs. Cloudiness
         </a>
         <a class="thumbnail" href="LatvWind.html">
-          <img src=".\visualizations\windvslat.png" width="60" height="60" class="d-inline-block align-top" alt="wind-thumbnail">
-          Latitude vs. Temperature
+          <img src=".\visualizations\windvslat.png" width="125" height="100" class="d-inline-block align-top" alt="wind-thumbnail">
+          Latitude vs. Windiness
         </a>
   
       </nav>
     </div>
-
+</span>
 
 </body>
 </html>
