--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 
 <!DOCTYPE html>
 <html lang="en-us">
-
+<!-- import "bootswatch/dist/solar/bootstrap.min.css" -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Weather Data</title>
-    import "bootswatch/dist/solar/bootstrap.min.css"
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/solar/bootstrap.min.css" 
     integrity="sha384-NCwXci5f5ZqlDw+m7FwZSAwboa0svoPPylIW3Nf+GBDsyVum+yArYnaFLE9UDzLd"
     crossorigin="anonymous"/>
@@ -127,29 +127,30 @@
 
         </div>
     </div>
-
-    <div class="d-{md,lg,xl}-none">
+<span>
+    <div  class="d-{md,lg,xl}-none">
       <nav class="navbar navbar-expand-false navbar-light bg-light"> 
         <a class="thumbnail" href="LatvTemp.html">
-          <img src=".\visualizations\tempvslat.png" width="60" height="60" class="d-inline-block align-top" alt="temp-thumbnail">
+          <img src=".\visualizations\tempvslat.png" width="125" height="100" class="d-inline-block align-top" alt="temp-thumbnail">
           Latitude vs. Temperature
         </a>
         <a class="thumbnail" href="LatvHumidity.html">
-          <img src=".\visualizations\humidityvslat.png" width="60" height="60" class="d-inline-block align-top" alt="Humidity-thumbnail">
-          Latitude vs. Temperature
+          <img src=".\visualizations\humidityvslat.png" width="125" height="100" class="d-inline-block align-top" alt="Humidity-thumbnail">
+          Latitude vs. Humidity
         </a>
         <a class="thumbnail" href="LatvCloud.html">
-          <img src=".\visualizations\cloudsvslat.png" width="60" height="60" class="d-inline-block align-top" alt="cloud-thumbnail">
-          Latitude vs. Temperature
+          <img src=".\visualizations\cloudsvslat.png" width="125" height="100" class="d-inline-block align-top" alt="cloud-thumbnail">
+          Latitude vs. Cloudiness
         </a>
         <a class="thumbnail" href="LatvWind.html">
-          <img src=".\visualizations\windvslat.png" width="60" height="60" class="d-inline-block align-top" alt="wind-thumbnail">
-          Latitude vs. Temperature
+          <img src=".\visualizations\windvslat.png" width="125" height="100" class="d-inline-block align-top" alt="wind-thumbnail">
+          Latitude vs. Windiness
         </a>
   
       </nav>
+    
     </div>
-
+</span>
 
 </body>
 
