--- a/LatvCloud.html
+++ b/LatvCloud.html
@@ -106,7 +106,7 @@
             </div>
         </div>
     </div>
- <span>
+ <span id="map-bar">
     <div class="d-{md,lg,xl}-none">
     <nav class="navbar navbar-expand-false navbar-light bg-light"> 
       <a class="thumbnail" href="LatvTemp.html">
