--- a/comparison.html
+++ b/comparison.html
@@ -66,6 +66,10 @@
 <div class="container">
     <div class="row">
         <h1 class="display-6">Comparison:  Latitude vs. X</h1>
+        </div>
+        <div class="row">
+          
+        <h6 class="text-left">*click on icons below the graphs to visit the individual page</h6>
     </div>
 </div>
 
