--- a/LatvTemp.html
+++ b/LatvTemp.html
@@ -106,11 +106,11 @@
             </div>
         </div>
     </div>
-  <span>
+  <span id="map-bar">
     <div class="d-{md,lg,xl}-none">
       <nav class="navbar navbar-expand-false navbar-light bg-light"> 
         <a class="thumbnail" href="LatvTemp.html">
-          <img src=".\visualizaions\tempvslat.png" width="125" height="100" class="d-inline-block align-top" alt="temp-thumbnail">
+          <img src=".\visualizations\tempvslat.png" width="125" height="100" class="d-inline-block align-top" alt="temp-thumbnail">
           Latitude vs. Temperature
         </a>
         <a class="thumbnail" href="LatvHumidity.html">
