--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         </div>
     </div>
-<span>
+<span id="map-bar">
     <div  class="d-{md,lg,xl}-none">
       <nav class="navbar navbar-expand-false navbar-light bg-light"> 
         <a class="thumbnail" href="LatvTemp.html">
