--- a/LatvCloud.html
+++ b/LatvCloud.html
@@ -76,6 +76,13 @@
                       Since the plots are all over the graph it can be concluded that there is no significant correlation
                       between the percent of cloudiness and a cities latitude.
                     </p>
+                    <img src=".\visualizations\cloudy.jpg" class="img-fluid" alt="clouds">
+                    <p class="text-break"> According to http://www-das.uwyo.edu/~geerts/cwx/notes/chap08/cloud_lat.html#:~:text=Satellite%2Dbased%20cloudiness%20estimates%20over,%2D%2050%25%20cloud%20cover%20there.&text=At%20latitudes%20above%2050%EF%BF%BD,cloud%20cover%20is%20about%2070%25.
+                      cloudiness does have to deal with latitude and longitude, but it not as simple as being close to the equator increases or decreases the cloudiness.
+                    In fact in one instance the equatorial belt actually throws off the norm of cloudiness used for the rest of the globe.
+                    </p>
+                    <hr>
+                    <P> The image above was found at https://slate.com/technology/2015/05/cloudy-earth-map-of-cloud-coverage.html on 11/17/2020. </P>
             </div>
 
             <div class="col-4 bg-info" id="gthumbnails">
