--- a/LatvHumidity.html
+++ b/LatvHumidity.html
@@ -74,7 +74,12 @@
 
                     <p>This graph shows a cities latitude and humidity at the time the data was pulled and seems
                       to indicate there is no correlation or causation between humidity and location.
-                      Though at close examination there might be slightly more dots on the right side of the graph(the Northern Hemisphere).
+                      <hr>
+                      Though at close examination there are more dots on the right side of the graph(the Northern Hemisphere),
+                      because the data seemed to pull more cities on the Northern Hemisphere.  There seem to be more at a higher
+                      percentage of humidity, but a large portion of them seem to be located at a higher latitude.  The r value determined
+                      from the Northern Hemisphere of this data is 0.267 is stronger than the Southern Hemisphere r value of 0.04, but not
+                       strong enough to be considered a correlation.  The higher r value could be because of the tilt of the earth in late October.
                     </p>
             </div>
             <div class="col-4 bg-info" id="gthumbnails">
