--- a/LatvTemp.html
+++ b/LatvTemp.html
@@ -77,6 +77,12 @@
                     <p><strong>Analysis:</strong> While the temperatures above 40&#8457 seem to be semi-uniform; only the Northern Hemisphere has max 
                       temperatures below 40&#8457 on the date pulled.  
                     </p>
+
+                    <img src=".\visualizations\combo.png" class="img-fluid" alt="combo">
+                    <p2>This graph is the combination of two graphs; one plotted the Northern Hemisphere,
+                      the other plotted the Southern Hemisphere.  They both have their linear regression lines plotted,
+                      which help highlight the fact that the max temp. gets higher as the latitude approaches 0. 
+                    </p2>
             </div>
             <div class="col-4 bg-info" id="gthumbnails">
                 <div class="thumbnail">
