--- a/LatvWind.html
+++ b/LatvWind.html
@@ -77,7 +77,16 @@
                       there does not seem to be enough data to show causation.
                     </p>
                     <hr>
-                    <p>*Interesting note - the only wind speed above 25mph(on the day the data was pulled) is found in the Northern Hemisphere.</p>
+                    <p>*Interesting note - the only wind speed above 25 mph(on the day the data was pulled) is found in the Northern Hemisphere.</p>
+                    <hr>
+                    <p2>The image below shows the wind patterns across the globe.  Latitude seems to have 
+                      something to do with windiness, but it is not the only thing that affects windiness according to:
+                      https://www.eoas.ubc.ca/courses/atsc113/sailing/met_concepts/09-met-winds/9a-global-wind-circulations/. 
+                      <hr> Which is also where I got the image from below on 11/17/2020.
+                    </p2>
+
+                    <img src=".\visualizations\wind_pattern.png" class="img-fluid" alt="Wpattern">
+
             </div>
             <div class="col-4 bg-info" id="gthumbnails">
                 <div class="thumbnail">
